--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Nx.SharePoint.Auth0/obj/Debug
+/.vs/Nx.SharePoint.Auth0/v14/.suo
